# vault-search

./: .env.example  .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
docs/: IMPLEMENTATION_DESIGN.md
indexer/: __init__.py  indexer.py
search/: __init__.py  app.py  canvas.py  chat.py  config.py  fragment_resolver.py  models.py  ollama_client.py  qdrant_client.py
search/static/css/: site.css
search/static/js/: canvas.js  chat.js
search/templates/: base.html  index.html
search/templates/_partials/: canvas_item.html  chat_message.html  fragment_card.html
tests/: conftest.py  test_canvas.py  test_chat.py  test_indexer.py  test_ui.spec.md
